--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -181,7 +181,7 @@
                             $color-primary,
                             $color-white
                         );
-                        padding: $spacing-xs $spacing-l;
+                        padding: 8px 30px;
                         width: 118px;
                         height: 42px;
                     }
