--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -16,84 +16,105 @@ body {
         margin: 0 auto;
     }
 
-    .main-image {
-        background-image: url("/img/main-img.png");
-        padding: 42px 40px;
+    .header {
+        @include flex-center(row, space-between, center);
+        padding: 20px 40px;
+        background-color: $color-white;
+        border-radius: 80px;
+        position: fixed;
         width: 100%;
-        height: 860px;
-        background-size: cover;
-        position: relative;
+        top: 70px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000;
+        box-shadow: 7px 6px 27px -2px rgba(0, 0, 0, 0.4);
+        -webkit-box-shadow: 7px 6px 27px -2px rgba(0, 0, 0, 0.4);
+        -moz-box-shadow: 7px 6px 27px -2px rgba(0, 0, 0, 0.4);
 
-        .header {
-            @include flex-center(row, space-between, center);
-            padding: 20px 40px;
-            background-color: $color-white;
-            border-radius: 80px;
+        @media (max-width: 1280px) {
+            height: 100px;
+        }
+
+        @media (max-width: 680px) {
+            width: 400px;
+        }
+
+        .navbar {
+            @include flex-center(row, center, center);
 
             @media (max-width: 1280px) {
-                height: 100px;
+                display: none;
+            }
+        }
+
+        .nav-right-block {
+            @include flex-center(row, center, center);
+            gap: 20px;
+
+            @media (max-width: 1280px) {
+                padding: 40px;
+                width: 700px;
+                @include flex-center(row, flex-end, center);
             }
 
-            .navbar {
+            .phone {
                 @include flex-center(row, center, center);
+                gap: 12px;
 
-                @media (max-width: 1280px) {
-                    display: none;
-                }
-            }
-
-            .nav-right-block {
-                @include flex-center(row, center, center);
-                gap: 20px;
-
-                @media (max-width: 1280px) {
-                    padding: 40px;
-                    width: 700px;
-                    @include flex-center(row, flex-end, center);
-                }
-
-                .phone {
-                    @include flex-center(row, center, center);
-                    gap: 12px;
-
-                    a {
-                        @include font-style(
-                            500,
-                            20px,
-                            $font-size-medium,
-                            $color-primary,
-                            1px
-                        );
-                    }
-                }
-
-                .add-button {
-                    @include button-style(
-                        $color-white,
-                        $color-primary,
-                        80px,
-                        $border-solid,
+                a {
+                    @include font-style(
+                        500,
+                        20px,
                         $font-size-medium,
                         $color-primary,
-                        $color-white
+                        1px
                     );
-                    padding: 2px 30px;
-                    text-align: center;
-                    display: flex;
-                }
-
-                @media (max-width: 830px) {
-                    display: none;
                 }
             }
 
-            .burger {
+            .add-button {
+                @include button-style(
+                    $color-white,
+                    $color-primary,
+                    80px,
+                    $border-solid,
+                    $font-size-medium,
+                    $color-primary,
+                    $color-white
+                );
+                padding: 2px 30px;
+                text-align: center;
+                display: flex;
+            }
+
+            @media (max-width: 830px) {
                 display: none;
-
-                @media (max-width: 1280px) {
-                    display: flex;
-                }
             }
+        }
+
+        .burger {
+            display: none;
+
+            @media (max-width: 1280px) {
+                display: flex;
+                height: 30px;
+            }
+        }
+    }
+
+    main {
+        @include flex-center(column);
+
+        .main-image {
+            background-image: url("/img/main-img.png");
+            padding: 42px 40px;
+            height: 860px;
+            width: 100%;
+            background-size: cover;
+        }
+
+        section {
+            padding: 100px 0;
         }
 
         .text-box {
@@ -172,43 +193,12 @@ body {
                 }
             }
         }
-    }
-
-    main {
-        @include flex-center(column);
-
-        section {
-            padding: 100px 0;
-        }
 
         .column-widgets {
             @include flex-center(column, center, center);
             gap: 40px;
             width: 100%;
 
-            .categories-header {
-                @include flex-center(row, space-between, center);
-                width: 100%;
-
-                @media (max-width: 1390px) {
-                    @include flex-center(row, center, center);
-                }
-
-                .news-widget-btn {
-                    @media (max-width: 1390px) {
-                        display: none;
-                    }
-                }
-
-                .categories-title {
-                    @include flex-center(column, center, flex-start);
-                    gap: 5px;
-
-                    @media (max-width: 1390px) {
-                        @include flex-center(column, center, center);
-                    }
-                }
-            }
             h2 {
                 @include font-style(
                     500,
@@ -226,17 +216,6 @@ body {
                     $font-size-medium,
                     $color-primary
                 );
-            }
-        }
-
-        .row-widgets {
-            @include flex-center(row, space-between, center);
-            gap: 40px;
-            width: 100%;
-            flex-wrap: wrap;
-
-            @media (max-width: 1400px) {
-                @include flex-center(row, space-evenly, center);
             }
         }
 
@@ -271,6 +250,10 @@ body {
                     width: 638px;
                     background-size: cover;
                     padding: 25px;
+
+                    @media (max-width: 660px) {
+                        transform: scale(0.6);
+                    }
 
                     .clients-stats {
                         background-color: $color-white;
@@ -309,6 +292,11 @@ body {
                             $color-white
                         );
                         width: 556px;
+
+                        @media (max-width: 660px) {
+                            width: 400px;
+                            text-align: center;
+                        }
                     }
 
                     h2 {
@@ -319,6 +307,11 @@ body {
                             $color-white
                         );
                         text-align: start;
+
+                        @media (max-width: 660px) {
+                            width: 400px;
+                            text-align: center;
+                        }
                     }
                 }
             }
@@ -378,6 +371,11 @@ body {
 
                 @media (max-width: 1100px) {
                     @include flex-center(column, space-between, center);
+                }
+
+                @media (max-width: 860px) {
+                    height: 100%;
+                    width: 100%;
                 }
 
                 .top-image {
@@ -509,13 +507,6 @@ body {
                         $font-size-medium,
                         $color-grey
                     );
-                }
-
-                .news-widgets-row {
-                    @include flex-center(row, center, center);
-                    max-width: 1440px;
-                    gap: 20px;
-                    flex-wrap: wrap;
                 }
             }
         }
